部分字段的选择功能、相关字段自动显示及枚举描述

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bo/supplier.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bo/supplier.zh_CN.json
@@ -6,9 +6,9 @@
   "bo_supplier_contactperson": "联系人",
   "bo_supplier_companyprivate": "公司/个人",
   "bo_supplier_billtostreet": "付款方街道",
-  "bo_supplier_billtozipcode": "付款方邮政编码",
+  "bo_supplier_billtozipcode": "付款方邮编",
   "bo_supplier_shiptostreet": "送达方街道",
-  "bo_supplier_shiptozipcode": "送达方邮政编码",
+  "bo_supplier_shiptozipcode": "送达方邮编",
   "bo_supplier_telephone1": "电话 1",
   "bo_supplier_telephone2": "电话 2",
   "bo_supplier_mobilephone": "移动电话",
