bo命名空间统一发布数据，界面调优

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bo/supplier.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bo/supplier.zh_CN.json
@@ -1,5 +1,5 @@
 {
-  "bo_supplier": "业务伙伴-供应商",
+  "bo_supplier": "供应商",
   "bo_supplier_code": "编码",
   "bo_supplier_name": "名称",
   "bo_supplier_group": "组代码",
