--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
@@ -6,31 +6,30 @@
   "businesspartner_business_information": "业务信息",
   "businesspartner_account_information": "账户信息",
   "businesspartner_other_information": "其他信息",
-  "businesspartner_current_status": "当前状态",
-  "businesspartner_func_businesspartnerbalancejournal": "业务伙伴余额记录",
-  "businesspartner_app_businesspartnerbalancejournal_list": "业务伙伴余额记录列表",
-  "businesspartner_app_businesspartnerbalancejournal_choose": "业务伙伴余额记录选择",
-  "businesspartner_app_businesspartnerbalancejournal_view": "业务伙伴余额记录查看",
-  "businesspartner_app_businesspartnerbalancejournal_edit": "业务伙伴余额记录编辑",
   "businesspartner_func_businesspartnergroup": "业务伙伴组",
   "businesspartner_app_businesspartnergroup_list": "业务伙伴组列表",
   "businesspartner_app_businesspartnergroup_choose": "业务伙伴组选择",
   "businesspartner_app_businesspartnergroup_view": "业务伙伴组查看",
   "businesspartner_app_businesspartnergroup_edit": "业务伙伴组编辑",
-  "businesspartner_func_contactperson": "业务伙伴联系人",
-  "businesspartner_app_contactperson_list": "业务伙伴联系人列表",
-  "businesspartner_app_contactperson_choose": "业务伙伴联系人选择",
-  "businesspartner_app_contactperson_view": "业务伙伴联系人查看",
-  "businesspartner_app_contactperson_edit": "业务伙伴联系人编辑",
-  "businesspartner_func_customer": "业务伙伴-客户",
-  "businesspartner_app_customer_list": "业务伙伴-客户列表",
-  "businesspartner_app_customer_choose": "业务伙伴-客户选择",
-  "businesspartner_app_customer_view": "业务伙伴-客户查看",
-  "businesspartner_app_customer_edit": "业务伙伴-客户编辑",
-  "businesspartner_func_supplier": "业务伙伴-供应商",
-  "businesspartner_app_supplier_list": "业务伙伴-供应商列表",
-  "businesspartner_app_supplier_choose": "业务伙伴-供应商选择",
-  "businesspartner_app_supplier_view": "业务伙伴-供应商查看",
-  "businesspartner_app_supplier_edit": "业务伙伴-供应商编辑",
+  "businesspartner_func_contactperson": "联系人",
+  "businesspartner_app_contactperson_list": "联系人列表",
+  "businesspartner_app_contactperson_choose": "联系人选择",
+  "businesspartner_app_contactperson_view": "联系人查看",
+  "businesspartner_app_contactperson_edit": "联系人编辑",
+  "businesspartner_func_customer": "客户",
+  "businesspartner_app_customer_list": "客户列表",
+  "businesspartner_app_customer_choose": "客户选择",
+  "businesspartner_app_customer_view": "客户查看",
+  "businesspartner_app_customer_edit": "客户编辑",
+  "businesspartner_func_supplier": "供应商",
+  "businesspartner_app_supplier_list": "供应商列表",
+  "businesspartner_app_supplier_choose": "供应商选择",
+  "businesspartner_app_supplier_view": "供应商查看",
+  "businesspartner_app_supplier_edit": "供应商编辑",
+  "businesspartner_func_businesspartnerbalancejournal": "业务伙伴余额记录",
+  "businesspartner_app_businesspartnerbalancejournal_list": "业务伙伴余额记录列表",
+  "businesspartner_app_businesspartnerbalancejournal_choose": "业务伙伴余额记录选择",
+  "businesspartner_app_businesspartnerbalancejournal_view": "业务伙伴余额记录查看",
+  "businesspartner_app_businesspartnerbalancejournal_edit": "业务伙伴余额记录编辑",
   "businesspartner_closing_delimiter": "----结束----"
 }
