--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bo/customer.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bo/customer.zh_CN.json
@@ -1,5 +1,5 @@
 {
-  "bo_customer": "业务伙伴-客户",
+  "bo_customer": "客户",
   "bo_customer_code": "编码",
   "bo_customer_name": "名称",
   "bo_customer_group": "组代码",
