--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
@@ -1,7 +1,7 @@
 {
   "businesspartner": "业务伙伴",
   "businesspartner_icon": "sap-icon://customer-and-supplier",
-  "businesspartner_basis_information": "基本信息",
+  "businesspartner_general_information": "常规信息",
   "businesspartner_contact_information": "联系信息",
   "businesspartner_business_information": "业务信息",
   "businesspartner_account_information": "账户信息",
