--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bo/customer.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bo/customer.zh_CN.json
@@ -3,6 +3,7 @@
   "bo_customer_code": "编码",
   "bo_customer_name": "名称",
   "bo_customer_group": "组代码",
+  "bo_customer_activated": "有效的",
   "bo_customer_contactperson": "联系人",
   "bo_customer_companyprivate": "公司/个人",
   "bo_customer_billtostreet": "付款方街道",
