业务伙伴梳理

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bo/address.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bo/address.zh_CN.json
@@ -15,6 +15,7 @@
   "bo_address_telephone2": "电话 2",
   "bo_address_remark1": "备注 1",
   "bo_address_remark2": "备注 2",
+  "bo_address_contacts": "联系人",
   "bo_address_objectkey": "对象编号",
   "bo_address_objectcode": "对象类型",
   "bo_address_createdate": "创建日期",
