--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bo/customer.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bo/customer.zh_CN.json
@@ -3,13 +3,11 @@
   "bo_customer_code": "编码",
   "bo_customer_name": "名称",
   "bo_customer_group": "组代码",
-  "bo_customer_activated": "有效的",
-  "bo_customer_contactperson": "联系人",
+  "bo_customer_activated": "激活",
   "bo_customer_companyprivate": "公司/个人",
-  "bo_customer_billtostreet": "付款方街道",
-  "bo_customer_billtozipcode": "付款方邮编",
-  "bo_customer_shiptostreet": "送达方街道",
-  "bo_customer_shiptozipcode": "送达方邮编",
+  "bo_customer_contactperson": "联系人",
+  "bo_customer_billaddress": "账单地址",
+  "bo_customer_shipaddress": "送货地址",
   "bo_customer_telephone1": "电话 1",
   "bo_customer_telephone2": "电话 2",
   "bo_customer_mobilephone": "移动电话",
