--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bo/supplier.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bo/supplier.zh_CN.json
@@ -3,13 +3,11 @@
   "bo_supplier_code": "编码",
   "bo_supplier_name": "名称",
   "bo_supplier_group": "组代码",
-  "bo_supplier_activated": "有效的",
-  "bo_supplier_contactperson": "联系人",
+  "bo_supplier_activated": "激活",
   "bo_supplier_companyprivate": "公司/个人",
-  "bo_supplier_billtostreet": "付款方街道",
-  "bo_supplier_billtozipcode": "付款方邮编",
-  "bo_supplier_shiptostreet": "送达方街道",
-  "bo_supplier_shiptozipcode": "送达方邮编",
+  "bo_supplier_contactperson": "联系人",
+  "bo_supplier_billaddress": "账单地址",
+  "bo_supplier_shipaddress": "送货地址",
   "bo_supplier_telephone1": "电话 1",
   "bo_supplier_telephone2": "电话 2",
   "bo_supplier_mobilephone": "移动电话",
