业务伙伴增加资产相关

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
@@ -26,6 +26,21 @@
   "businesspartner_app_address_choose": "业务伙伴地址选择",
   "businesspartner_app_address_view": "业务伙伴地址查看",
   "businesspartner_app_address_edit": "业务伙伴地址编辑",
+  "businesspartner_func_assetitem": "资产项目",
+  "businesspartner_app_assetitem_list": "资产项目列表",
+  "businesspartner_app_assetitem_choose": "资产项目选择",
+  "businesspartner_app_assetitem_view": "资产项目查看",
+  "businesspartner_app_assetitem_edit": "资产项目编辑",
+  "businesspartner_func_businesspartnerasset": "业务伙伴资产",
+  "businesspartner_app_businesspartnerasset_list": "业务伙伴资产列表",
+  "businesspartner_app_businesspartnerasset_choose": "业务伙伴资产选择",
+  "businesspartner_app_businesspartnerasset_view": "业务伙伴资产查看",
+  "businesspartner_app_businesspartnerasset_edit": "业务伙伴资产编辑",
+  "businesspartner_func_businesspartnerassetjournal": "业务伙伴资产日记账",
+  "businesspartner_app_businesspartnerassetjournal_list": "业务伙伴资产日记账列表",
+  "businesspartner_app_businesspartnerassetjournal_choose": "业务伙伴资产日记账选择",
+  "businesspartner_app_businesspartnerassetjournal_view": "业务伙伴资产日记账查看",
+  "businesspartner_app_businesspartnerassetjournal_edit": "业务伙伴资产日记账编辑",
   "businesspartner_title_general": "常规信息",
   "businesspartner_title_contact": "联系信息",
   "businesspartner_title_others": "其他信息",
