--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
@@ -6,11 +6,6 @@
   "businesspartner_app_businesspartnergroup_choose": "业务伙伴组选择",
   "businesspartner_app_businesspartnergroup_view": "业务伙伴组查看",
   "businesspartner_app_businesspartnergroup_edit": "业务伙伴组编辑",
-  "businesspartner_func_contactperson": "联系人",
-  "businesspartner_app_contactperson_list": "联系人列表",
-  "businesspartner_app_contactperson_choose": "联系人选择",
-  "businesspartner_app_contactperson_view": "联系人查看",
-  "businesspartner_app_contactperson_edit": "联系人编辑",
   "businesspartner_func_customer": "客户",
   "businesspartner_app_customer_list": "客户列表",
   "businesspartner_app_customer_choose": "客户选择",
@@ -21,6 +16,11 @@
   "businesspartner_app_supplier_choose": "供应商选择",
   "businesspartner_app_supplier_view": "供应商查看",
   "businesspartner_app_supplier_edit": "供应商编辑",
+  "businesspartner_func_contactperson": "业务伙伴联系人",
+  "businesspartner_app_contactperson_list": "业务伙伴联系人列表",
+  "businesspartner_app_contactperson_choose": "业务伙伴联系人选择",
+  "businesspartner_app_contactperson_view": "业务伙伴联系人查看",
+  "businesspartner_app_contactperson_edit": "业务伙伴联系人编辑",
   "businesspartner_func_address": "业务伙伴地址",
   "businesspartner_app_address_list": "业务伙伴地址列表",
   "businesspartner_app_address_choose": "业务伙伴地址选择",
@@ -36,13 +36,16 @@
   "businesspartner_app_businesspartnerasset_choose": "业务伙伴资产选择",
   "businesspartner_app_businesspartnerasset_view": "业务伙伴资产查看",
   "businesspartner_app_businesspartnerasset_edit": "业务伙伴资产编辑",
-  "businesspartner_func_businesspartnerassetjournal": "业务伙伴资产日记账",
-  "businesspartner_app_businesspartnerassetjournal_list": "业务伙伴资产日记账列表",
-  "businesspartner_app_businesspartnerassetjournal_choose": "业务伙伴资产日记账选择",
-  "businesspartner_app_businesspartnerassetjournal_view": "业务伙伴资产日记账查看",
-  "businesspartner_app_businesspartnerassetjournal_edit": "业务伙伴资产日记账编辑",
+  "businesspartner_func_businesspartnerassetjournal": "业务伙伴资产交易",
+  "businesspartner_app_businesspartnerassetjournal_list": "业务伙伴资产交易列表",
+  "businesspartner_app_businesspartnerassetjournal_choose": "业务伙伴资产交易选择",
+  "businesspartner_app_businesspartnerassetjournal_view": "业务伙伴资产交易查看",
+  "businesspartner_app_businesspartnerassetjournal_edit": "业务伙伴资产交易编辑",
   "businesspartner_title_general": "常规信息",
   "businesspartner_title_contact": "联系信息",
+  "businesspartner_title_values": "价值信息",
   "businesspartner_title_others": "其他信息",
+  "businesspartner_view_businesspartnerassetjournal": "查看交易",
+  "businesspartner_new_businesspartnerassetjournal": "新建交易",
   "businesspartner_closing_delimiter": "----结束----"
 }
