完善业务伙伴资产

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -33,8 +33,99 @@
         "bo_address_closing_delimiter": "----结束----"
     },
     {
+        "bo_assetitem": "资产项目",
+        "bo_assetitem_code": "编号",
+        "bo_assetitem_name": "名称",
+        "bo_assetitem_activated": "激活",
+        "bo_assetitem_referenced": "已引用",
+        "bo_assetitem_deleted": "已删除",
+        "bo_assetitem_docentry": "对象编号",
+        "bo_assetitem_objectcode": "对象类型",
+        "bo_assetitem_createdate": "创建日期",
+        "bo_assetitem_createtime": "创建时间",
+        "bo_assetitem_updatedate": "修改日期",
+        "bo_assetitem_updatetime": "修改时间",
+        "bo_assetitem_loginst": "版本",
+        "bo_assetitem_series": "服务系列",
+        "bo_assetitem_datasource": "数据源",
+        "bo_assetitem_createusersign": "创建用户",
+        "bo_assetitem_updateusersign": "修改用户",
+        "bo_assetitem_createactionid": "创建动作标识",
+        "bo_assetitem_updateactionid": "更新动作标识",
+        "bo_assetitem_approvalstatus": "审批状态",
+        "bo_assetitem_dataowner": "数据所有者",
+        "bo_assetitem_organization": "数据所属组织",
+        "bo_assetitem_validdate": "生效日期",
+        "bo_assetitem_invaliddate": "失效日期",
+        "bo_assetitem_faceamount": "面值",
+        "bo_assetitem_amountunit": "单位",
+        "bo_assetitem_usingtimes": "可用次数",
+        "bo_assetitem_usingdiscount": "使用时折扣",
+        "bo_assetitem_overdraft": "透支额",
+        "bo_assetitem_validdays": "有效天数",
+        "bo_assetitem_remarks": "备注",
+        "bo_assetitem_closing_delimiter": "----结束----"
+    },
+    {
+        "bo_businesspartnerasset": "业务伙伴资产",
+        "bo_businesspartnerasset_objectkey": "对象编号",
+        "bo_businesspartnerasset_objectcode": "对象类型",
+        "bo_businesspartnerasset_loginst": "实例号",
+        "bo_businesspartnerasset_series": "服务系列",
+        "bo_businesspartnerasset_datasource": "数据源",
+        "bo_businesspartnerasset_createdate": "创建日期",
+        "bo_businesspartnerasset_createtime": "创建时间",
+        "bo_businesspartnerasset_updatedate": "更新日期",
+        "bo_businesspartnerasset_updatetime": "更新时间",
+        "bo_businesspartnerasset_createusersign": "创建用户",
+        "bo_businesspartnerasset_updateusersign": "更新用户",
+        "bo_businesspartnerasset_createactionid": "创建动作标识",
+        "bo_businesspartnerasset_updateactionid": "更新动作标识",
+        "bo_businesspartnerasset_referenced": "已引用",
+        "bo_businesspartnerasset_deleted": "已删除",
+        "bo_businesspartnerasset_businesspartnertype": "业务伙伴类型",
+        "bo_businesspartnerasset_businesspartnercode": "业务伙伴编码",
+        "bo_businesspartnerasset_assetcode": "资产项目",
+        "bo_businesspartnerasset_servicecode": "服务码",
+        "bo_businesspartnerasset_activated": "激活",
+        "bo_businesspartnerasset_validdate": "生效日期",
+        "bo_businesspartnerasset_invaliddate": "失效日期",
+        "bo_businesspartnerasset_amount": "剩余价值",
+        "bo_businesspartnerasset_times": "剩余次数",
+        "bo_businesspartnerasset_basedocumenttype": "基于类型",
+        "bo_businesspartnerasset_basedocumententry": "基于标识",
+        "bo_businesspartnerasset_basedocumentlineid": "基于行号",
+        "bo_businesspartnerasset_tradingamount": "交易金额",
+        "bo_businesspartnerasset_tradingcurrency": "交易货币",
+        "bo_businesspartnerasset_remark1": "备注 1",
+        "bo_businesspartnerasset_remark2": "备注 2",
+        "bo_businesspartnerasset_closing_delimiter": "----结束----"
+    },
+    {
+        "bo_businesspartnerassetjournal": "业务伙伴资产日记账",
+        "bo_businesspartnerassetjournal_objectkey": "对象编号",
+        "bo_businesspartnerassetjournal_objectcode": "对象类型",
+        "bo_businesspartnerassetjournal_loginst": "实例号",
+        "bo_businesspartnerassetjournal_datasource": "数据源",
+        "bo_businesspartnerassetjournal_createdate": "创建日期",
+        "bo_businesspartnerassetjournal_createtime": "创建时间",
+        "bo_businesspartnerassetjournal_updatedate": "更新日期",
+        "bo_businesspartnerassetjournal_updatetime": "更新时间",
+        "bo_businesspartnerassetjournal_createusersign": "创建用户",
+        "bo_businesspartnerassetjournal_updateusersign": "更新用户",
+        "bo_businesspartnerassetjournal_createactionid": "创建动作标识",
+        "bo_businesspartnerassetjournal_updateactionid": "更新动作标识",
+        "bo_businesspartnerassetjournal_servicecode": "服务码",
+        "bo_businesspartnerassetjournal_direction": "方向",
+        "bo_businesspartnerassetjournal_amount": "交易量",
+        "bo_businesspartnerassetjournal_basedocumenttype": "基于类型",
+        "bo_businesspartnerassetjournal_basedocumententry": "基于标识",
+        "bo_businesspartnerassetjournal_basedocumentlineid": "基于行号",
+        "bo_businesspartnerassetjournal_closing_delimiter": "----结束----"
+    },
+    {
         "bo_businesspartnergroup": "业务伙伴组",
-        "bo_businesspartnergroup_code": "编号",
+        "bo_businesspartnergroup_code": "编码",
         "bo_businesspartnergroup_name": "名称",
         "bo_businesspartnergroup_activated": "激活",
         "bo_businesspartnergroup_docentry": "对象编号",
@@ -164,97 +255,6 @@
         "bo_supplier_dataowner": "数据所有者",
         "bo_supplier_organization": "数据所属组织",
         "bo_supplier_closing_delimiter": "----结束----"
-    },
-    {
-        "bo_assetitem": "资产项目",
-        "bo_assetitem_code": "编号",
-        "bo_assetitem_name": "名称",
-        "bo_assetitem_activated": "激活",
-        "bo_assetitem_referenced": "已引用",
-        "bo_assetitem_deleted": "已删除",
-        "bo_assetitem_docentry": "对象编号",
-        "bo_assetitem_objectcode": "对象类型",
-        "bo_assetitem_createdate": "创建日期",
-        "bo_assetitem_createtime": "创建时间",
-        "bo_assetitem_updatedate": "修改日期",
-        "bo_assetitem_updatetime": "修改时间",
-        "bo_assetitem_loginst": "版本",
-        "bo_assetitem_series": "服务系列",
-        "bo_assetitem_datasource": "数据源",
-        "bo_assetitem_createusersign": "创建用户",
-        "bo_assetitem_updateusersign": "修改用户",
-        "bo_assetitem_createactionid": "创建动作标识",
-        "bo_assetitem_updateactionid": "更新动作标识",
-        "bo_assetitem_approvalstatus": "审批状态",
-        "bo_assetitem_dataowner": "数据所有者",
-        "bo_assetitem_organization": "数据所属组织",
-        "bo_assetitem_validdate": "生效日期",
-        "bo_assetitem_invaliddate": "失效日期",
-        "bo_assetitem_faceamount": "面值",
-        "bo_assetitem_amountunit": "单位",
-        "bo_assetitem_amountvalue": "单位价值",
-        "bo_assetitem_discountused": "使用时折扣",
-        "bo_assetitem_overdraft": "透支额",
-        "bo_assetitem_validtime": "有效期（天）",
-        "bo_assetitem_remarks": "备注",
-        "bo_assetitem_closing_delimiter": "----结束----"
-    },
-    {
-        "bo_businesspartnerasset": "业务伙伴资产",
-        "bo_businesspartnerasset_objectkey": "对象编号",
-        "bo_businesspartnerasset_objectcode": "对象类型",
-        "bo_businesspartnerasset_loginst": "实例号",
-        "bo_businesspartnerasset_series": "服务系列",
-        "bo_businesspartnerasset_datasource": "数据源",
-        "bo_businesspartnerasset_createdate": "创建日期",
-        "bo_businesspartnerasset_createtime": "创建时间",
-        "bo_businesspartnerasset_updatedate": "更新日期",
-        "bo_businesspartnerasset_updatetime": "更新时间",
-        "bo_businesspartnerasset_createusersign": "创建用户",
-        "bo_businesspartnerasset_updateusersign": "更新用户",
-        "bo_businesspartnerasset_createactionid": "创建动作标识",
-        "bo_businesspartnerasset_updateactionid": "更新动作标识",
-        "bo_businesspartnerasset_businesspartnertype": "业务伙伴类型",
-        "bo_businesspartnerasset_businesspartnercode": "业务伙伴编码",
-        "bo_businesspartnerasset_assetcode": "资产项目",
-        "bo_businesspartnerasset_servicecode": "服务码",
-        "bo_businesspartnerasset_activated": "激活",
-        "bo_businesspartnerasset_validdate": "生效日期",
-        "bo_businesspartnerasset_invaliddate": "失效日期",
-        "bo_businesspartnerasset_amount": "余量",
-        "bo_businesspartnerasset_basedocumenttype": "基于类型",
-        "bo_businesspartnerasset_basedocumententry": "基于标识",
-        "bo_businesspartnerasset_basedocumentlineid": "基于行号",
-        "bo_businesspartnerasset_tradingamount": "交易金额",
-        "bo_businesspartnerasset_tradingcurrency": "交易货币",
-        "bo_businesspartnerasset_remark1": "备注 1",
-        "bo_businesspartnerasset_remark2": "备注 2",
-        "bo_businesspartnerasset_closing_delimiter": "----结束----"
-    },
-    {
-        "bo_businesspartnerassetjournal": "业务伙伴资产日记账",
-        "bo_businesspartnerassetjournal_objectkey": "对象编号",
-        "bo_businesspartnerassetjournal_objectcode": "对象类型",
-        "bo_businesspartnerassetjournal_loginst": "实例号",
-        "bo_businesspartnerassetjournal_datasource": "数据源",
-        "bo_businesspartnerassetjournal_createdate": "创建日期",
-        "bo_businesspartnerassetjournal_createtime": "创建时间",
-        "bo_businesspartnerassetjournal_updatedate": "更新日期",
-        "bo_businesspartnerassetjournal_updatetime": "更新时间",
-        "bo_businesspartnerassetjournal_createusersign": "创建用户",
-        "bo_businesspartnerassetjournal_updateusersign": "更新用户",
-        "bo_businesspartnerassetjournal_createactionid": "创建动作标识",
-        "bo_businesspartnerassetjournal_updateactionid": "更新动作标识",
-        "bo_businesspartnerassetjournal_servicecode": "服务码",
-        "bo_businesspartnerassetjournal_direction": "方向",
-        "bo_businesspartnerassetjournal_amount": "交易量",
-        "bo_businesspartnerassetjournal_basedocumenttype": "基于类型",
-        "bo_businesspartnerassetjournal_basedocumententry": "基于标识",
-        "bo_businesspartnerassetjournal_basedocumentlineid": "基于行号",
-        "bo_businesspartnerassetjournal_originaldocumenttype": "原始类型",
-        "bo_businesspartnerassetjournal_originaldocumententry": "原始标识",
-        "bo_businesspartnerassetjournal_originaldocumentlineid": "原始行号",
-        "bo_businesspartnerassetjournal_closing_delimiter": "----结束----"
     },
     {
         "em_male": "男",
