调整业务伙伴资产相关

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -34,7 +34,7 @@
     },
     {
         "bo_assetitem": "资产项目",
-        "bo_assetitem_code": "编号",
+        "bo_assetitem_code": "编码",
         "bo_assetitem_name": "名称",
         "bo_assetitem_activated": "激活",
         "bo_assetitem_referenced": "已引用",
@@ -68,25 +68,29 @@
     },
     {
         "bo_businesspartnerasset": "业务伙伴资产",
-        "bo_businesspartnerasset_objectkey": "对象编号",
+        "bo_businesspartnerasset_code": "编码",
+        "bo_businesspartnerasset_name": "名称",
+        "bo_businesspartnerasset_docentry": "对象编号",
         "bo_businesspartnerasset_objectcode": "对象类型",
-        "bo_businesspartnerasset_loginst": "实例号",
-        "bo_businesspartnerasset_series": "服务系列",
-        "bo_businesspartnerasset_datasource": "数据源",
         "bo_businesspartnerasset_createdate": "创建日期",
         "bo_businesspartnerasset_createtime": "创建时间",
-        "bo_businesspartnerasset_updatedate": "更新日期",
-        "bo_businesspartnerasset_updatetime": "更新时间",
+        "bo_businesspartnerasset_updatedate": "修改日期",
+        "bo_businesspartnerasset_updatetime": "修改时间",
+        "bo_businesspartnerasset_loginst": "版本",
+        "bo_businesspartnerasset_series": "服务系列",
+        "bo_businesspartnerasset_datasource": "数据源",
         "bo_businesspartnerasset_createusersign": "创建用户",
-        "bo_businesspartnerasset_updateusersign": "更新用户",
+        "bo_businesspartnerasset_updateusersign": "修改用户",
         "bo_businesspartnerasset_createactionid": "创建动作标识",
         "bo_businesspartnerasset_updateactionid": "更新动作标识",
+        "bo_businesspartnerasset_approvalstatus": "审批状态",
+        "bo_businesspartnerasset_dataowner": "数据所有者",
+        "bo_businesspartnerasset_organization": "数据所属组织",
         "bo_businesspartnerasset_referenced": "已引用",
         "bo_businesspartnerasset_deleted": "已删除",
         "bo_businesspartnerasset_businesspartnertype": "业务伙伴类型",
         "bo_businesspartnerasset_businesspartnercode": "业务伙伴编码",
         "bo_businesspartnerasset_assetcode": "资产项目",
-        "bo_businesspartnerasset_servicecode": "服务码",
         "bo_businesspartnerasset_activated": "激活",
         "bo_businesspartnerasset_acquireddate": "获得日期",
         "bo_businesspartnerasset_validdate": "生效日期",
@@ -116,7 +120,7 @@
         "bo_businesspartnerassetjournal_updateusersign": "更新用户",
         "bo_businesspartnerassetjournal_createactionid": "创建动作标识",
         "bo_businesspartnerassetjournal_updateactionid": "更新动作标识",
-        "bo_businesspartnerassetjournal_servicecode": "服务码",
+        "bo_businesspartnerassetjournal_servicecode": "业务伙伴资产码",
         "bo_businesspartnerassetjournal_direction": "方向",
         "bo_businesspartnerassetjournal_amount": "交易量",
         "bo_businesspartnerassetjournal_basedocumenttype": "基于类型",
