--- a/ibas.businesspartner/src/main/resources/i18n/locale.bp.properties
+++ b/ibas.businesspartner/src/main/resources/i18n/locale.bp.properties
@@ -4,6 +4,7 @@ msg_bp_assetitem_is_not_exist = 资产项目[%s]不存在
 msg_bp_businesspartnerasset_is_not_exist = 业务伙伴资产[%s]不存在
 msg_bp_businesspartnerasset_is_unavailable = 业务伙伴[%s]资产[%s]不可用
 msg_bp_businesspartnerasset_exceeding_overdraft_range = 业务伙伴[%s]资产[%s]超过允许透支范围[%s]
+msg_bp_businesspartnerasset_exceeding_amount = 业务伙伴[%s]资产[%s]超出可用价值[%s]
 msg_bp_businesspartnerasset_not_allowed_recharge = 业务伙伴[%s]资产[%s]不允许充值
 msg_bp_businesspartnerasset_exceeding_times = 业务伙伴[%s]资产[%s]超过允许使用次数[%s]
 msg_bp_disagreement_unit_with_assetitem = 单位与资产项目[%s]设置的不一致
