修复、调整视图，添加客户供应商仓库

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -201,6 +201,7 @@
         "bo_customer_taxid": "国税编号",
         "bo_customer_pricelist": "价格清单",
         "bo_customer_currency": "货币",
+        "bo_customer_warehouse": "仓库",
         "bo_customer_validdate": "生效日期",
         "bo_customer_invaliddate": "失效日期",
         "bo_customer_remarks": "备注",
@@ -242,6 +243,7 @@
         "bo_supplier_taxid": "国税编号",
         "bo_supplier_pricelist": "价格清单",
         "bo_supplier_currency": "货币",
+        "bo_supplier_warehouse": "仓库",
         "bo_supplier_validdate": "生效日期",
         "bo_supplier_invaliddate": "失效日期",
         "bo_supplier_remarks": "备注",
