--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -224,6 +224,7 @@
         "bo_customer_dataowner": "数据所有者",
         "bo_customer_organization": "数据所属组织",
         "bo_customer_channel": "所属渠道",
+        "bo_customer_organizationalunit": "组织单位",
         "bo_customer_closing_delimiter": "----结束----"
     },
     {
@@ -266,6 +267,7 @@
         "bo_supplier_dataowner": "数据所有者",
         "bo_supplier_organization": "数据所属组织",
         "bo_supplier_channel": "所属渠道",
+        "bo_supplier_organizationalunit": "组织单位",
         "bo_supplier_closing_delimiter": "----结束----"
     },
     {
