--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -204,6 +204,7 @@
         "bo_customer_warehouse": "仓库",
         "bo_customer_validdate": "生效日期",
         "bo_customer_invaliddate": "失效日期",
+        "bo_customer_floorlist": "底价清单",
         "bo_customer_remarks": "备注",
         "bo_customer_referenced": "已引用",
         "bo_customer_deleted": "已删除",
