客户、供应商增加标识属性

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -188,6 +188,7 @@
         "bo_customer": "客户",
         "bo_customer_code": "编码",
         "bo_customer_name": "名称",
+        "bo_customer_sign": "标识",
         "bo_customer_group": "组代码",
         "bo_customer_activated": "激活",
         "bo_customer_companyprivate": "公司/个人",
@@ -232,6 +233,7 @@
         "bo_supplier": "供应商",
         "bo_supplier_code": "编码",
         "bo_supplier_name": "名称",
+        "bo_supplier_sign": "标识",
         "bo_supplier_group": "组代码",
         "bo_supplier_activated": "激活",
         "bo_supplier_companyprivate": "公司/个人",
