增加开票信息

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -195,11 +195,16 @@
         "bo_customer_contactperson": "联系人",
         "bo_customer_billaddress": "账单地址",
         "bo_customer_shipaddress": "送货地址",
+        "bo_customer_registrationaddress": "注册地址",
         "bo_customer_telephone1": "电话 1",
         "bo_customer_telephone2": "电话 2",
         "bo_customer_mobilephone": "移动电话",
         "bo_customer_faxnumber": "传真号",
         "bo_customer_taxid": "国税编号",
+        "bo_customer_bank": "开户银行",
+        "bo_customer_bankaccount": "银行账户",
+        "bo_customer_invoiceaddress": "发票地址",
+        "bo_customer_invoicetelephone": "发票电话",
         "bo_customer_pricelist": "价格清单",
         "bo_customer_currency": "货币",
         "bo_customer_warehouse": "仓库",
@@ -241,11 +246,16 @@
         "bo_supplier_contactperson": "联系人",
         "bo_supplier_billaddress": "账单地址",
         "bo_supplier_shipaddress": "送货地址",
+        "bo_supplier_registrationaddress": "注册地址",
         "bo_supplier_telephone1": "电话 1",
         "bo_supplier_telephone2": "电话 2",
         "bo_supplier_mobilephone": "移动电话",
         "bo_supplier_faxnumber": "传真号",
         "bo_supplier_taxid": "国税编号",
+        "bo_supplier_bank": "开户银行",
+        "bo_supplier_bankaccount": "银行账户",
+        "bo_supplier_invoiceaddress": "发票地址",
+        "bo_supplier_invoicetelephone": "发票电话",
         "bo_supplier_pricelist": "价格清单",
         "bo_supplier_currency": "货币",
         "bo_supplier_warehouse": "仓库",
