--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/businesspartner.zh_CN.json
@@ -44,6 +44,7 @@
   "businesspartner_title_general": "常规信息",
   "businesspartner_title_contact": "联系信息",
   "businesspartner_title_values": "价值信息",
+  "businesspartner_title_invoices": "开票信息",
   "businesspartner_title_others": "其他信息",
   "businesspartner_view_businesspartnerassetjournal": "查看交易",
   "businesspartner_new_businesspartnerassetjournal": "新建交易",
