增加资产分组属性

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -36,6 +36,7 @@
         "bo_assetitem": "资产项目",
         "bo_assetitem_code": "编码",
         "bo_assetitem_name": "名称",
+        "bo_assetitem_group": "组",
         "bo_assetitem_activated": "激活",
         "bo_assetitem_referenced": "已引用",
         "bo_assetitem_deleted": "已删除",
@@ -93,6 +94,7 @@
         "bo_businesspartnerasset_businesspartnertype": "业务伙伴类型",
         "bo_businesspartnerasset_businesspartnercode": "业务伙伴",
         "bo_businesspartnerasset_assetcode": "资产项目",
+        "bo_businesspartnerasset_assetgroup": "资产项目组",
         "bo_businesspartnerasset_activated": "激活",
         "bo_businesspartnerasset_acquireddate": "获得日期",
         "bo_businesspartnerasset_validdate": "生效日期",
