--- a/ibas.businesspartner/src/main/resources/i18n/locale.bp.properties
+++ b/ibas.businesspartner/src/main/resources/i18n/locale.bp.properties
@@ -11,3 +11,4 @@ msg_bp_customer_is_unavailable = 客户[%s - %s]不可用
 msg_bp_supplier_is_unavailable = 供应商[%s - %s]不可用
 msg_bp_assetitem_is_unavailable = 资产项目[%s - %s]不可用
 msg_bp_businesspartnerasset_is_unavailable = 业务伙伴[%s]资产[%s]不可用
+msg_bp_no_fetch_method_defined = 没有定义类型[%s]的检索方式
