增加移动端窗体

--- a/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.businesspartner.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -207,6 +207,7 @@
         "bo_customer_taxid": "国税编号",
         "bo_customer_bank": "开户银行",
         "bo_customer_bankaccount": "银行账户",
+        "bo_customer_invoicetitle": "发票抬头",
         "bo_customer_invoiceaddress": "发票地址",
         "bo_customer_invoicetelephone": "发票电话",
         "bo_customer_pricelist": "价格清单",
@@ -258,6 +259,7 @@
         "bo_supplier_taxid": "国税编号",
         "bo_supplier_bank": "开户银行",
         "bo_supplier_bankaccount": "银行账户",
+        "bo_supplier_invoicetitle": "发票抬头",
         "bo_supplier_invoiceaddress": "发票地址",
         "bo_supplier_invoicetelephone": "发票电话",
         "bo_supplier_pricelist": "价格清单",
